Fixing alignment of H-mobile's subscribe button
Via a media query that happens at just that single-pixel-width of H-mobile iPhone 5s, then goes back to regular at the next pixel width.

--- a/assets/css/mediaqueries-PRE-SUBSCRIBE-BUTTON-FIX-TAKE-2.css
+++ b/assets/css/mediaqueries-PRE-SUBSCRIBE-BUTTON-FIX-TAKE-2.css
@@ -371,25 +371,6 @@
 
 
 
-/* SUBSCRIBE BUTTON FOR HORIZONTAL MOBILE ONLY -------------------------------------------------- */
-/* 
-@media (min-width: 667px) {
-     .subscribebutton {
-        bottom: calc(2.3em + 3.057rem + 7.143vw + 1.5px);
-    }
-}
-*/
-
-/* PUTTING SUBSCRIBE BUTTON BACK TO NORMAL -------------------------------------------------- */
-@media (min-width: 668px) {
-     .subscribebutton {
-        bottom: calc(3.6rem + 7.143vw + 1.5px);
-    }
-}
-
-
-
-
 /* POSTGLASSES -------------------------------------------------- */
 
 /* @media only screen and (min-width: 613px) { */
